feature: update-user-name endpoint
